# cpp-projects

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
designs/: ip_filter.cpp
designs/bulk_cmd_parser/: CMakeLists.txt  block_queue.h  bulk.h  main.cpp
designs/bulk_cmd_parser/async/: async.cpp
designs/custom_allocator/: custom_allocator.cpp  custom_allocator_source.cpp  custom_allocators.h  custom_containers.h
designs/file_deduplicator/: CMakeLists.txt  Readme.md  bayan
designs/file_deduplicator/demo/: large_duplicate_2.txt  large_no_duplicates.txt  small_duplicate_1.csv  small_duplicate_2.txt
designs/file_deduplicator/demo/exclude/: secret.txt  secret_duplicate_2.txt
designs/file_deduplicator/include/: block_reader.h  config.h  crc32_hasher.h  duplicate_finder.h  hasher.h  md5_hasher.h
designs/file_deduplicator/src/: block_reader.cpp  config.cpp  duplicate_finder.cpp  hasher_factory.cpp  main.cpp
designs/gui_editor/app/: main.cpp
designs/gui_editor/controller/: controller.h
designs/gui_editor/io/: serializer.h
designs/gui_editor/model/: basic_geometry.h  document.h  shape.h  shape_factory.h  shape_id.h
designs/gui_editor/view/: view.h
designs/ip_address_templates/: ip_address_templates.cpp  print_ip.cpp
designs/ip_filter/: ip_filter.cpp
designs/matrix/: main.cpp  sparse_matrix.h  sparse_matrix_example.h  sparse_matrix_template.h
